<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>proc_vision_ros2</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="log.sonia.club@etsmtl.ca">sonia2</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>roscpp</depend>
  <depend>message_runtime</depend>
  <depend>sensor_msgs</depend>
  <depend>sonia_common</depend>
  <depend>cv_bridge</depend>
  <depend>roslaunch</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

</package>
